sway.mdx translated

--- a/docs/contrib/contributors.mdx
+++ b/docs/contrib/contributors.mdx
@@ -16,7 +16,7 @@ hide_table_of_contents: true
   - 🇫🇷 The [French version](https://wiki.archcraft.io/fr/) is translated by [Arnae](https://www.github.com/Archenagechan)
   - 🇵🇱 The [Polish version](https://wiki.archcraft.io/pl/) is translated by [Keyitdev](https://www.github.com/Keyitdev)
   - 🇹🇷 The [Turkish version](https://wiki.archcraft.io/tr/) is translated by [Levent Can Yılmaz](https://github.com/lvntcnylmz)
-  - 🇵🇹 The [Brazilian portuguese version](https://wiki.archcraft.io/pt-BR/) is translated by [Gean Gonçalves](https://github.com/gean634n)
+  - 🇵🇹 The [Brazilian portuguese version](https://wiki.archcraft.io/pt-BR/) is translated by [Gean Gonçalves](https://github.com/gean634n) and [Italo Maia](https://github.com/maia-italo)
   - 🇨🇳 The [Simplified Chinese version](https://wiki.archcraft.io/zh/) is translated by [Wang Zhihong](https://github.com/TOLIE-OFFICIAL)
 
 - **Editors** (previous version of wiki)
