--- a/i18n/pt/docusaurus-plugin-content-docs/current/wayland-compositors/river.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/wayland-compositors/river.mdx
@@ -379,7 +379,7 @@ GRUB_CMDLINE_LINUX_DEFAULT="quiet splash nvidia_drm.modeset=1 ..."
 - Atualize sua configuração do grub com: `sudo grub-mkconfig -o /boot/grub/grub.cfg`
 - Reinicie sua máquina Nvidia e faça login no seu compositor wayland, isso deve funcionar agora.
 
-Mais informações: [NVIDIA#Installation](https://wiki.archlinux.org/title/NVIDIA#Installation), [NVIDIA#DRM_kernel_mode_setting](https://wiki.archlinux.org/title/NVIDIA#DRM_kernel_mode_setting)
+Mais informações: [NVIDIA#Instalação](https://wiki.archlinux.org/title/NVIDIA#Installation), [NVIDIA#DRM_kernel_mode_setting](https://wiki.archlinux.org/title/NVIDIA#DRM_kernel_mode_setting)
 
 <!-- Themes --------------------------------------- -->
 
