--- a/i18n/pt/docusaurus-plugin-content-docs/current/contrib/contributors.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/contrib/contributors.mdx
@@ -16,7 +16,7 @@ hide_table_of_contents: true
   - 🇫🇷 A [versão francesa](https://wiki.archcraft.io/fr/) foi traduzida por [Arnae](https://www.github.com/Archenagechan)
   - 🇵🇱 A [versão polonesa](https://wiki.archcraft.io/pl/) foi traduzida por [Keyitdev](https://www.github.com/Keyitdev)
   - 🇹🇷 A [versão turca](https://wiki.archcraft.io/tr/) foi traduzida por [Levent Can Yılmaz](https://github.com/lvntcnylmz)
-  - 🇵🇹 A [versão brasileira](https://wiki.archcraft.io/pt-BR/) foi traduzida por [Gean Gonçalves](https://github.com/gean634n)
+  - 🇵🇹 A [versão brasileira](https://wiki.archcraft.io/pt-BR/) foi traduzida por [Gean Gonçalves](https://github.com/gean634n) e [Italo Maia](https://github.com/maia-italo)
   - 🇨🇳 A [versão chinesa simplificada](https://wiki.archcraft.io/zh/) foi traduzida por [Wang Zhihong](https://github.com/TOLIE-OFFICIAL)
 
 - **Editores** (versão anterior da wiki)
