--- a/i18n/pt/docusaurus-plugin-content-docs/current/window-managers/dynamic-wm/dwm.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/window-managers/dynamic-wm/dwm.mdx
@@ -26,244 +26,251 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<!-- Add your stuff after this -------------------- -->
+<!-- Adicione suas coisas depois disso -------------------- -->
 
-DWM is a dynamic window manager for Xorg. It manages windows in tiled, stacked, and full-screen layouts, as well as many others with the help of optional patches. Layouts can be applied dynamically, optimizing the environment for the application in use and the task being performed. dwm is extremely lightweight and fast, written in C and with a stated design goal of remaining under 2000 source lines of code. It provides multihead support for xrandr and Xinerama.
+DWM é um gerenciador de janelas dinâmico para o Xorg. Ele gerencia janelas em layouts em mosaico, empilhado e tela cheia, além de muitos outros com a ajuda de patches opcionais. Os layouts podem ser aplicados dinamicamente, otimizando o ambiente para o aplicativo em uso e a tarefa que está sendo realizada. O dwm é extremamente leve e rápido, escrito em C, com o objetivo declarado de manter menos de 2000 linhas de código-fonte. Ele oferece suporte multihead para xrandr e Xinerama.
 
 ![img](https://raw.githubusercontent.com/archcraft-os/misc-files/main/screenshots/dwm/main.png)
 
-<!-- Installation --------------------------------- -->
+<!-- Instalação --------------------------------- -->
 
-## Installation
+## Instalação
 
-Once you finish installing Archcraft, **DWM** can be installed on the top of it. It's pre-configured and ready to go. Open a terminal and run the following command to install DWM :
+Depois de concluir a instalação do Archcraft, **DWM** pode ser instalado por cima dele. Ele vem pré-configurado e pronto para uso. Abra um terminal e execute o seguinte comando para instalar o DWM:
 ```bash
 $ sudo pacman -Sy archcraft-dwm
 ```
 
-<!-- Configuration -------------------------------- -->
+<!-- Configuração -------------------------------- -->
 
-## Configuration
+## Configuração
 
-DWM is pre-configured in Archcraft. In this section, We'll see how the DWM window manager is configured, what tools and utilities are used to make it look and work like a complete desktop environment.
+O **DWM** vem pré-configurado no Archcraft. Nesta seção, veremos como o gerenciador de janelas DWM é configurado, quais ferramentas e utilitários são usados para fazê-lo parecer e funcionar como um ambiente de desktop completo.
 
-### Config Structure
+### Estrutura de Configuração  
 
-The configuration structure of DWM in Archcraft looks something like this:
+A estrutura de configuração do DWM no Archcraft se parece com algo assim:
 
 ```
-/opt
-└── dwm-source                : dwm source code
-    └── config.def.h          : dwm config file
-/usr
-└── share
-    └── archcraft
-        └── dwm
-            ├── alacritty     : terminal config
-            ├── scripts       : scripts used for dwm
-            ├── theme         : desktop theme (polybar, rofi configs) 
-            ├── dunstrc       : dunst config for notifications
-            ├── picom.conf    : compositor config
-            └── xsettingsd    : gtk themes, icons and fonts config file
+/opt  
+└── dwm-source                : código-fonte do dwm  
+    └── config.def.h          : arquivo de configuração do dwm  
+/usr  
+└── share  
+    └── archcraft  
+        └── dwm  
+            ├── alacritty     : configuração do terminal  
+            ├── scripts       : scripts usados pelo dwm  
+            ├── theme         : tema da área de trabalho (configs do polybar, rofi)  
+            ├── dunstrc       : configuração do dunst para notificações  
+            ├── picom.conf    : configuração do compositor  
+            └── xsettingsd    : arquivo de configuração de temas GTK, ícones e fontes  
 ```
 
 ### Terminal
 
-**Alacritty** is the default terminal. In DWM window manager, alacritty is launched with an alternative config file. If you need to change anything, make sure you modify the config files in `/usr/share/archcraft/dwm/alacritty` directory. These are the following config files you can modify to change the behaviour of your terminal:
+**Alacritty** é o terminal padrão. No gerenciador de janelas **DWM**, o Alacritty é iniciado com um arquivo de configuração alternativo. Se você precisar modificar algo, certifique-se de alterar os arquivos de configuração no diretório `/usr/share/archcraft/dwm/alacritty`. Estes são os arquivos de configuração que você pode modificar para alterar o comportamento do terminal:
 
-**`/usr/share/archcraft/dwm/alacritty/alacritty.toml`** : Main configuration file <br/>
-**`/usr/share/archcraft/dwm/alacritty/colors.toml`** : Colors configurations <br/>
-**`/usr/share/archcraft/dwm/alacritty/fonts.toml`** : Fonts configurations
+**`/usr/share/archcraft/dwm/alacritty/alacritty.toml`** : Arquivo principal de configuração <br/>  
+**`/usr/share/archcraft/dwm/alacritty/colors.toml`** : Configurações de cores <br/>  
+**`/usr/share/archcraft/dwm/alacritty/fonts.toml`** : Configurações de fontes  
 
-> If you need any help with alacritty config, run : `man 5 alacritty` in terminal.
+> Se precisar de ajuda com a configuração do Alacritty, execute: `man 5 alacritty` no terminal.
 
-### Notification
+### Notificações  
 
-**Dunst** is used as a notification daemon for notifications in DWM. In DWM window manager, dunst is launched with an alternative config file, which is `/usr/share/archcraft/dwm/dunstrc`. So, If you need to modify anything, make sure you edit this file.
+O **Dunst** é usado como daemon de notificações no **DWM**. No gerenciador de janelas DWM, o Dunst é iniciado com um arquivo de configuração alternativo, localizado em `/usr/share/archcraft/dwm/dunstrc`. Portanto, se precisar modificar algo, certifique-se de editar esse arquivo.  
 
-> If you need any help with dunst config, run : `man 5 dunst` in terminal.
+> Se precisar de ajuda com a configuração do Dunst, execute: `man 5 dunst` no terminal.
 
-### Wallpaper
+### Papel de Parede  
 
-**hsetroot** sets the wallpaper in the DWM. If you want to change the wallpaper, Edit `/usr/share/archcraft/dwm/scripts/dwm_autostart` script and add the path to your wallpaper :
+O **hsetroot** é usado para definir o papel de parede no **DWM**. Se você quiser alterar o papel de parede, edite o script `/usr/share/archcraft/dwm/scripts/dwm_autostart` e adicione o caminho para o seu papel de parede:  
+
 ```bash
-# Restore wallpaper
-hsetroot -cover '/path/to/your/wallpaper'
+# Restaurar papel de parede  
+hsetroot -cover '/caminho/para/seu/papel/de/parede'
+```
 ```
 
-### Statusbar
+### Barra de Status  
 
-**xsetroot** is used to generate the elements on statusbar in Archcraft's DWM window manager.
+O **xsetroot** é usado para gerar os elementos na barra de status no gerenciador de janelas **DWM** do Archcraft.  
 
-Edit `/usr/share/archcraft/dwm/scripts/dwm_bar` script to add/remove/modify the statusbar elements.
+Edite o script `/usr/share/archcraft/dwm/scripts/dwm_bar` para adicionar, remover ou modificar os elementos da barra de status.
 
-### Launchers and Applets
+### Launchers e Applets  
 
-**Rofi** is used for application launchers, command runner and various applets. To modify the rofi config, edit `~/.config/rofi/config.rasi` file.
+O **Rofi** é usado como lançador de aplicativos, executor de comandos e para diversos applets. Para modificar a configuração do Rofi, edite o arquivo `~/.config/rofi/config.rasi`.  
 
-> If you need any help with rofi config, run : `man rofi` in terminal.
+> Se precisar de ajuda com a configuração do Rofi, execute: `man rofi` no terminal.  
 
-The scripts for rofi that are used in DWM can be found it `/usr/share/archcraft/dwm/scripts` directory. These are the following scripts that uses rofi to provide the launchers and applets :
+Os scripts do Rofi usados no **DWM** podem ser encontrados no diretório `/usr/share/archcraft/dwm/scripts`. Abaixo estão os scripts que utilizam o Rofi para fornecer os lançadores e applets:  
 
-**`rofi_askpass`** : rofi based `sudo` frontend to get root password <br/>
-**`rofi_asroot`** : applet to open apps as root <br/>
-**`rofi_bluetooth`** : bluetooth applet to quickly connect to BT devices <br/>
-**`rofi_launcher`** : an application launcher, cmd runner, file manager and task manager  <br/>
-**`rofi_layouts`** : applet to change the layouts <br/>
-**`rofi_music`** : music applet, that controls MPD with `mpc` <br/>
-**`rofi_powermenu`** : power menu, with confirmation dialog <br/>
-**`rofi_runner`** : quickly lets you run a command <br/>
-**`rofi_screenshot`** : screenshot applet that works with maim <br/>
-**`rofi_windows`** : applet to manage opened windows <br/>
+**`rofi_askpass`** : frontend baseado no Rofi para `sudo`, usado para obter a senha de root <br/>  
+**`rofi_asroot`** : applet para abrir aplicativos como root <br/>  
+**`rofi_bluetooth`** : applet para conectar rapidamente a dispositivos Bluetooth <br/>  
+**`rofi_launcher`** : lançador de aplicativos, executor de comandos, gerenciador de arquivos e gerenciador de tarefas <br/>  
+**`rofi_layouts`** : applet para alterar os layouts <br/>  
+**`rofi_music`** : applet de música, que controla o MPD com `mpc` <br/>  
+**`rofi_powermenu`** : menu de energia com diálogo de confirmação <br/>  
+**`rofi_runner`** : permite executar comandos rapidamente <br/>  
+**`rofi_screenshot`** : applet de captura de tela que funciona com `maim` <br/>  
+**`rofi_windows`** : applet para gerenciar janelas abertas <br/>  
 
-If you want to modify any applet or perhaps want to extend the functionality of the applet, just edit these scripts above.
+Se você quiser modificar qualquer applet ou até mesmo estender suas funcionalidades, basta editar os scripts acima.  
 
-The configuration of each script can be found inside the _theme_ directory of DWM `/usr/share/archcraft/dwm/theme`
+A configuração de cada script pode ser encontrada dentro do diretório **_theme_** do DWM: `/usr/share/archcraft/dwm/theme`.  
 
-Let's say you want to modify the looks of **launcher**, then you need to edit the `/usr/share/archcraft/dwm/theme/rofi/launcher.rasi` file. Same goes for every other applet, Edit the respective file in the same directory.
+Por exemplo, se você quiser modificar a aparência do **launcher**, edite o arquivo `/usr/share/archcraft/dwm/theme/rofi/launcher.rasi`. O mesmo vale para todos os outros applets. Edite o arquivo correspondente no mesmo diretório.  
 
-> If you need any help with rofi theming, run : `man rofi-theme` in terminal.
+> Se precisar de ajuda com o tema do Rofi, execute: `man rofi-theme` no terminal.  
 
-To change the colors and fonts of the launchers and applets, Edit the `/usr/share/archcraft/dwm/theme/rofi/shared/colors.rasi` and `/usr/share/archcraft/dwm/theme/rofi/shared/fonts.rasi` files.
+Para alterar as cores e fontes dos lançadores e applets, edite os arquivos:  
+- `/usr/share/archcraft/dwm/theme/rofi/shared/colors.rasi`  
+- `/usr/share/archcraft/dwm/theme/rofi/shared/fonts.rasi`  
 
-### Compositor
+### Compositor  
 
-**Picom** is used for compositing. It's a lightweight compositor with shadowing, advanced blurring and fading. In DWM, picom is launched with an alternative config file, which is `/usr/share/archcraft/dwm/picom.conf`. 
+O **Picom** é usado para composição de janelas. É um compositor leve com sombreamento, desfoque avançado e efeitos de fade. No **DWM**, o Picom é iniciado com um arquivo de configuração alternativo, que está localizado em `/usr/share/archcraft/dwm/picom.conf`.  
 
-If you need to change anything related to picom, Edit this picom config file.
+Se precisar alterar qualquer coisa relacionada ao Picom, edite este arquivo de configuração do Picom.  
 
-> If you need any help with picom config, check the picom's default config file in `/etc/xdg/picom.conf`
+> Se precisar de ajuda com a configuração do Picom, consulte o arquivo de configuração padrão do Picom em `/etc/xdg/picom.conf`.  
 
-:::info
+:::info  
 
-If you're having screen-tearing issues, using `glx` backend can solve this issue. <br/>
-If you're facing lagging, hangs and freezes, try switching between `xrender` and `glx` backend.  
+Se você estiver enfrentando problemas de **screen tearing**, usar o backend `glx` pode resolver o problema. <br/>  
+Se você estiver enfrentando **lags**, travamentos ou congelamentos, tente alternar entre os backends `xrender` e `glx`.  
 
-:::
+:::  
 
-### Window Manager
+### Gerenciador de Janelas  
 
-`/opt/dwm-source/config.def.h` is the main configuration file of DWM. If you need to change anything or perhaps you want to add/remove/change keybindings, Edit this file and recompile DWM and then install the new binary.
+`/opt/dwm-source/config.def.h` é o arquivo principal de configuração do **DWM**. Se você precisar alterar algo ou quiser adicionar, remover ou modificar as teclas de atalho (keybindings), edite este arquivo, recompilar o DWM e então instale o novo binário.  
 
-> If you need any help with DWM configuration and customisation, visit : [suckless.org](https://dwm.suckless.org/customisation/)
+> Se precisar de ajuda com a configuração e personalização do DWM, visite: [suckless.org](https://dwm.suckless.org/customisation/)
 
-<!-- Keybindings ---------------------------------- -->
+<!-- Atalhos de Teclado ---------------------------------- -->
 
-## Keybindings
+## Atalhos de Teclado
 
-Here's a list of some important keybinds you need to know for operating DWM easily. If you want to view, modify or add new keybinds, Edit `/opt/dwm-source/config.def.h` file.
+Aqui está uma lista de alguns **atalhos de teclado** importantes que você precisa saber para operar o **DWM** de forma eficiente. Se você quiser visualizar, modificar ou adicionar novos atalhos, edite o arquivo `/opt/dwm-source/config.def.h`.
 
-### Applications
+### Aplicativos  
 
-| Keys | Action |
+| Atalhos | Ação |
 | --- | --- |
-| <kbd>super + Return</kbd> | Open terminal (st) |
-| <kbd>super + ctrl + Return</kbd> | Open terminal (alacritty) |
-| <kbd>super + shift + Return</kbd> | Open floating terminal (alacritty) |
-| <kbd>super + alt + Return</kbd> | Open fullscreen terminal (alacritty) |
-| <kbd>super + shift + F</kbd> | Open file manager (thunar) |
-| <kbd>super + shift + E</kbd> | Open text editor (geany) |
-| <kbd>super + shift + W</kbd> | Open web browser (firefox) |
+| <kbd>super + Return</kbd> | Abre o termianl (st) |
+| <kbd>super + ctrl + Return</kbd> | Abre o terminal (alacritty) |
+| <kbd>super + shift + Return</kbd> | Abre o terminal flutuante (alacritty) |
+| <kbd>super + alt + Return</kbd> | Abre o terminal em tela cheia (alacritty) |
+| <kbd>super + shift + F</kbd> | Abre o gerenciador de arquivos (thunar) |
+| <kbd>super + shift + E</kbd> | Abre o editor de texto (geany) |
+| <kbd>super + shift + W</kbd> | Abre o navegador (firefox) |
 
-### Menu and Applets
+### Menu e Applets
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super</kbd> | Open application launcher |
-| <kbd>alt + F1</kbd> | Open application launcher |
-| <kbd>alt + F2</kbd> | Open command runner |
-| <kbd>super + N</kbd> | Open network manager applet |
-| <kbd>super + B</kbd> | Open bluetooth applet |
-| <kbd>super + M</kbd> | Open music applet |
-| <kbd>super + X</kbd> | Open powermenu applet |
-| <kbd>super + S</kbd> | Open screenshots applet |
-| <kbd>super + R</kbd> | Open apps as root applet |
-| <kbd>super + W</kbd> | Open window applet |
+| <kbd>super</kbd> | Abre o lançador de aplicativos |
+| <kbd>alt + F1</kbd> | Abre o lançador de aplicativos |
+| <kbd>alt + F2</kbd> | Abre o executor de comandos |
+| <kbd>super + N</kbd> | Abre o applet para gerenciar conexão |
+| <kbd>super + B</kbd> | Abre o applet de bluetooth |
+| <kbd>super + M</kbd> | Abre o applet de música |
+| <kbd>super + X</kbd> | Abre o applet de menu de energia |
+| <kbd>super + S</kbd> | Abre o applet de cptura de tela |
+| <kbd>super + R</kbd> | Abre o applet para lançar aplicativos como root |
+| <kbd>super + W</kbd> | Abre a janela de applets |
 
-### Hardware Keys
+### Atalhos de Hardware
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>Print</kbd> | Take screenshot |
-| <kbd>alt + Print</kbd> | Take screenshot in 5 seconds delay |
-| <kbd>shift + Print</kbd> | Take screenshot in 10 seconds delay |
-| <kbd>ctrl + Print</kbd> | Take screenshot of currently focused window |
-| <kbd>super + Print</kbd> | Take screenshot of selected area |
-| <kbd>XF86AudioRaiseVolume</kbd> | Increase volume |
-| <kbd>XF86AudioLowerVolume</kbd> | Decrease volume |
-| <kbd>XF86AudioMute</kbd> | Toggle mute speakers |
-| <kbd>XF86AudioMicMute</kbd> | Toggle mute microphone |
-| <kbd>XF86MonBrightnessUp</kbd> | Increase display brightness |
-| <kbd>XF86MonBrightnessDown</kbd> | Decrease display brightness |
+| <kbd>Print</kbd> | Tira um screenshot |
+| <kbd>alt + Print</kbd> | Tira um screenshot com 5 segundos de espera |
+| <kbd>shift + Print</kbd> | Tira um screenshot com 10 segundos de espera |
+| <kbd>ctrl + Print</kbd> | Tira um screenshot dajanela em foco |
+| <kbd>super + Print</kbd> | Tira um screenshot da áres selecionada |
+| <kbd>XF86AudioRaiseVolume</kbd> | Aumenta o volume |
+| <kbd>XF86AudioLowerVolume</kbd> | Diminui o volume |
+| <kbd>XF86AudioMute</kbd> | Alterna o mudo dos auto-falantes |
+| <kbd>XF86AudioMicMute</kbd> | Alterna o mudo do microfone |
+| <kbd>XF86MonBrightnessUp</kbd> | Aumenta o brilho da tela |
+| <kbd>XF86MonBrightnessDown</kbd> | Diminui o brilho da tela |
 
-### Window Management
+### Gerenciamento de Janela
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super + 1..9</kbd> | Switch to respective tag |
-| <kbd>super + C</kbd> | Close focued window |
-| <kbd>super + shift + Equal</kbd> | Increase border width |
-| <kbd>super + shift + Minus</kbd> | Decrease border width |
-| <kbd>super + shift + BackSpace</kbd> | Restore default border width |
-| <kbd>super + shift + Bracket_Left</kbd> | Increase gaps |
-| <kbd>super + shift + Bracket_Right</kbd> | Decrease gaps |
-| <kbd>super + shift + Backslash</kbd> | Restore default gaps |
-| <kbd>super + shift + G</kbd> | Toggle gaps |
-| <kbd>super + shift + I</kbd> | Increase inner gaps |
-| <kbd>super + shift + ctrl + I</kbd> | Decrease inner gaps |
-| <kbd>super + ctrl + O</kbd> | Increase outer gaps |
-| <kbd>super + shift + ctrl + O</kbd> | Decrease outer gaps |
-| <kbd>super + J/K</kbd> | Cycle window |
-| <kbd>super + shift + J/K</kbd> | Switch master |
-| <kbd>super + Left/Right</kbd> | Cycle window |
-| <kbd>super + shift + Left/Right</kbd> | Switch master |
-| <kbd>super + I</kbd> | Increase master vertically |
-| <kbd>super + U</kbd> | Decrease master horizontally |
-| <kbd>super + H/L</kbd> | Shrink left/right |
-| <kbd>super + Left/Right</kbd> | Shrink left/right |
-| <kbd>super + shift + B</kbd> | Toggle bar |
-| <kbd>super + Tab</kbd> | Switch to master |
-| <kbd>alt + Tab</kbd> | Switch to last tag |
-| <kbd>super + D</kbd> | Hide window |
-| <kbd>super + shift + D</kbd> | Restore window |
+| <kbd>super + 1..9</kbd> | Troca para a respectiva tag |
+| <kbd>super + C</kbd> | Fecha a janela em foco |
+| <kbd>super + shift + Equal</kbd> | Aumenta  a largura da borda |
+| <kbd>super + shift + Minus</kbd> | Diminui a largura da borda |
+| <kbd>super + shift + BackSpace</kbd> | Restaura a largura da borda para a padrão |
+| <kbd>super + shift + Bracket_Left</kbd> | Aumenta o espaçamento |
+| <kbd>super + shift + Bracket_Right</kbd> | Diminui o espaçamento |
+| <kbd>super + shift + Backslash</kbd> | Restaura o espaçamento para padrão |
+| <kbd>super + shift + G</kbd> | Alterna os espaçamentos |
+| <kbd>super + shift + I</kbd> | Aumenta o espaçamento interno |
+| <kbd>super + shift + ctrl + I</kbd> | Diminui o espaçamento interno |
+| <kbd>super + ctrl + O</kbd> | Aumenta o espaçamento externo |
+| <kbd>super + shift + ctrl + O</kbd> | Diminui o espaçamento externo |
+| <kbd>super + J/K</kbd> | Circula entre as janelas |
+| <kbd>super + shift + J/K</kbd> | Alterna o master |
+| <kbd>super + Left/Right</kbd> | Circula entre as janelas |
+| <kbd>super + shift + Left/Right</kbd> | Alterna o master |
+| <kbd>super + I</kbd> | Aumenta o master verticalmente |
+| <kbd>super + U</kbd> | Diminui o master horizontalmente |
+| <kbd>super + H/L</kbd> | Encolhe à esquerda/direita |
+| <kbd>super + Left/Right</kbd> | Encolhe à esquerda/direita |
+| <kbd>super + shift + B</kbd> | Alterna a barra |
+| <kbd>super + Tab</kbd> | Alterna para o master |
+| <kbd>alt + Tab</kbd> | Troca para a última tag |
+| <kbd>super + D</kbd> | Oculta a janela |
+| <kbd>super + shift + D</kbd> | Restaura a janela |
 
 ### Layouts
-| Keys | Action |
+
+| Atalho | Ação |
 | --- | --- |
-| <kbd>alt + ctrl + Space</kbd> | Run rofi layouts applet |
-| <kbd>super + ctrl + Comma/Period</kbd> | Cycle layouts |
-| <kbd>super + shift + Space</kbd> | Toggle floating |
-| <kbd>super + F</kbd> | Toggle fullscreen |
-| <kbd>super + Space</kbd> | Set last layout |
-| <kbd>super + T</kbd> | Set Tile layout|
-| <kbd>super + G</kbd> | Set Grid layout |
-| <kbd>super + shift + M</kbd> | Set Monocle layout |
-| <kbd>super + shift + S</kbd> | Set Spiral layout |
-| <kbd>super + shift + T</kbd> | Set Stack layout |
-| <kbd>super + shift + C</kbd> | Set Centered-Master layout |
-| <kbd>super + shift + X</kbd> | Set Tatami layout |
+| <kbd>alt + ctrl + Space</kbd> | Executa o applet de layout do rofi |
+| <kbd>super + ctrl + Comma/Period</kbd> | Circula entre os layouts |
+| <kbd>super + shift + Space</kbd> | Alterna o modo flutuante |
+| <kbd>super + F</kbd> | Alterna o modo tela cheia |
+| <kbd>super + Space</kbd> | Define o último layout |
+| <kbd>super + T</kbd> | Define o layout Ladrilho|
+| <kbd>super + G</kbd> | Define i layout Grade |
+| <kbd>super + shift + M</kbd> | Define o layout Monóculo |
+| <kbd>super + shift + S</kbd> | Define o layout Espiral |
+| <kbd>super + shift + T</kbd> | Define o layout Empilhado |
+| <kbd>super + shift + C</kbd> | Define o layout Master ao Centro |
+| <kbd>super + shift + X</kbd> | Define o layout Tatami |
 
-### Window Manager
+### Gerenciador de Janela
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super + shift + R</kbd> | Restart dwm |
-| <kbd>super + ctrl + Q</kbd> | Quit dwm |
+| <kbd>super + shift + R</kbd> | Reinicia o dwm |
+| <kbd>super + ctrl + Q</kbd> | Sai do dwm |
 
-### Misc Keys
+### Atalhos Variados
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>ctrl + alt + M</kbd> | Open ncmpcpp with album art in terminal |
-| <kbd>ctrl + alt + L</kbd> | Trigger lockscreen |
-| <kbd>super + P</kbd> | Run colorpicker  |
-| <kbd>super + Escape</kbd> | Run xkill |
+| <kbd>ctrl + alt + M</kbd> | Abre o ncmpcpp com a arte do álbum no terminal |
+| <kbd>ctrl + alt + L</kbd> | Aciona o bloqueio de tela |
+| <kbd>super + P</kbd> | Executa o seletor de cores  |
+| <kbd>super + Escape</kbd> | Executa o xkill |
 
-<!-- Themes --------------------------------------- -->
+<!-- Temas --------------------------------------- -->
 
-## Screenshots
+Aqui está a tradução do segmento:
 
-Here's few screenshots of `DWM` desktop. These'll give you an idea of the experience of DWM in Archcraft. 
+## Capturas de Tela
+
+Aqui estão algumas capturas de tela da área de trabalho `DWM`. Elas vão te dar uma ideia da experiência do DWM no Archcraft.
 
 |Desktop 1|Desktop 2|Desktop 3|Desktop 4|
 |---|---|---|---|
@@ -290,9 +297,9 @@ Here's few screenshots of `DWM` desktop. These'll give you an idea of the experi
 ## FAQs
 
 <details>
-<summary><b>How to change GTK theme, icons and cursor?</b></summary>
+<summary><b>Como mudar o tema GTK, ícones e cursor?</b></summary>
 
-To change GTK theme, icons and cursor in DWM session, Edit `/usr/share/archcraft/dwm/xsettingsd` file and restart DWM to apply the changes.
+Para mudar o tema GTK, ícones e cursor na sessão DWM, edite o arquivo `/usr/share/archcraft/dwm/xsettingsd` e reinicie o DWM para aplicar as mudanças.
 ```bash
 Net/ThemeName "Arc-Dark"
 Net/IconThemeName "Zafiro-Blue"
@@ -302,18 +309,17 @@ Gtk/CursorThemeName "Qogirr"
 </details>
 
 <details>
-<summary><b>How to manage multiple monitors and resolution in dwm?</b></summary>
+<summary><b>Como gerenciar múltiplos monitores e resolução no dwm?</b></summary>
 
-If you use multiple monitors with DWM window manager, you can manage them by running _Manager Monitors_ or `archcraft-randr` app.
+Se você usa múltiplos monitores com o gerenciador de janelas DWM, pode gerenciá-los executando o aplicativo Manager Monitors ou archcraft-randr.
 
 </details>
 
 <details>
-<summary><b>Why Alacritty is not working on my computer?</b></summary>
+<summary><b>Por que o Alacritty não está funcionando no meu computador?</b></summary>
 
-Since Alacritty is a OpenGL based terminal emulator, It may not work on some computer hardwares. You can make it work on such computers by following these methods :
+Como o Alacritty é um emulador de terminal baseado em OpenGL, ele pode não funcionar em alguns hardwares de computador. Você pode fazê-lo funcionar em tais computadores seguindo estes métodos:
 
-1. Open alacritty with **LIBGL_ALWAYS_SOFTWARE=1** variable. Edit the keybindings/script launching alacritty and replace `alacritty` with `LIBGL_ALWAYS_SOFTWARE=1 alacritty`
-2. Edit **/usr/share/applications/Alacritty.desktop** desktop file and replace `Exec=alacritty` with `Exec=env LIBGL_ALWAYS_SOFTWARE=1 alacritty`
-
+1. Abra o alacritty com a variável **LIBGL_ALWAYS_SOFTWARE=1**. Edite as teclas de atalho/script que lançam o alacritty e substitua `alacritty` por `LIBGL_ALWAYS_SOFTWARE=1 alacritty`.
+2. Edite o arquivo de desktop **/usr/share/applications/Alacritty.desktop** e substitua `Exec=alacritty` por `Exec=env LIBGL_ALWAYS_SOFTWARE=1 alacritty`.
 </details>
